<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OpinApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SendEmail">Send email</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="sex_prompt">Select your sex</string>
    <string name="default_web_client_id"></string>
    <string-array name="sex_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_main_screen">Main_screen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Password">Password</string>
    <string name="ShowPassword">Show Password</string>
    <string name="Continue">Log in with</string>
    <string name="ForgotPassword">Forgot your password?</string>
    <string name="rewardName">Reward Name</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="questionaryCode">Enter the questionnaire code</string>
    <string name="send">Send</string>
    <string name="userName">Username</string>
    <string name="date">Date of Birth</string>
    <string name="logout">Log out</string>






    <string name="menu_home">Home</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_reviews">Reviews</string>
</resources>