<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.opinapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.opinapp.ui.shop.ShopFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.opinapp.ui.reviews.ReviewsFragment"
        android:label="@string/menu_reviews"
        tools:layout="@layout/fragment_reviews" />
</navigation>