<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@drawable/fondo_redondeado">

    <!-- Detalles del producto -->
    <TextView
        android:id="@+id/product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rewardName"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorControlNormal"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/product_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name"/>

    <!-- Botones de acción -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/product_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5">

        <Button
            android:id="@+id/btn_sumbit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:textColor="#FFFFFF"
            android:background="@drawable/boton_redondeado"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/btn_dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:background="@drawable/boton_redondeado"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
