<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#203b59"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="97dp"
        android:layout_height="104dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/starealone" />


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:hint="Email"
        android:textColor="@color/colorControlNormal"
        android:textColorHint="@color/colorControlNormal"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="@color/colorControlNormal"
        android:textColorHint="@color/colorControlNormal"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/showPasswordCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/ShowPassword"
        android:textColor="@color/colorControlNormal" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/showPasswordCheckBox"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/userName"
        android:textColor="@color/colorControlNormal"
        android:textColorHint="@color/colorControlNormal"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/usernameEditText"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/gender_layout">

        <!-- Selector de Sexo -->
        <Spinner
            android:id="@+id/sexSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/sex_options"
            android:prompt="@string/sex_prompt"
            android:textColor="@color/colorControlNormal"
            android:textSize="24dp" />

        <!-- Selector de Fecha de Nacimiento -->
        <EditText
            android:id="@+id/dataPicker"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/sexSpinner"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/date"
            android:textColor="@color/colorControlNormal"
            android:textColorHint="@color/colorControlNormal"
            android:textSize="24dp" />

    </LinearLayout>

        <!-- Botón de Registrarse -->
        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/gender_layout"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:background="@drawable/boton_redondeado"
            android:text="Sign In"
            android:textColor="@android:color/white"
            android:textSize="25dp" />


    <TextView
        android:id="@+id/footerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="© 2024 Cadhis"
        android:textColor="@color/colorControlNormal"
        android:textSize="18sp" />
</RelativeLayout>
