<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#203b59"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="97dp"
        android:layout_height="104dp"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/starealone" />


    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="Email"
        android:textColor="@color/colorControlNormal"
        android:textColorHint="@color/colorControlNormal"
        android:textSize="24sp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameEditText"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColor="@color/colorControlNormal"
        android:textColorHint="@android:color/white"
        android:textSize="24sp"
        android:visibility="invisible" />

    <CheckBox
        android:id="@+id/showPasswordCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:text="@string/ShowPassword"
        android:textColor="@color/colorControlNormal"
        android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/showPasswordCheckBox"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        android:visibility="invisible">

        <!-- Botón de Login -->
        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/boton_redondeado"
            android:text="Login"
            android:textColor="@color/colorControlNormal"
            android:textSize="16sp" />

        <!-- Botón de Registrarse -->
        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@drawable/boton_redondeado"
            android:text="Sign in"
            android:textColor="@color/colorControlNormal"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/accedaConTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonsLayout"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/Continue"
        android:textColor="@color/colorControlNormal"
        android:textSize="14sp"
        android:visibility="invisible"/>



    <com.google.android.gms.common.SignInButton
        android:id="@+id/buttonGoogleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/accedaConTextView"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:visibility="invisible" />


    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonGoogleLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/ForgotPassword"
        android:textColor="@color/colorControlNormal"
        android:textSize="14sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/footerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="© 2024 Cadhis"
        android:textColor="@color/colorControlNormal"
        android:textSize="18sp" />
</RelativeLayout>
